--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -6,8 +6,10 @@
     // #72DDF7
     // #F4F4ED
 
-    --background-bg: #131417;
-    --background-bg2:#131417;
+    // --background-bg: #131417;
+    // --background-bg2:#131417;
+    --background-bg: #1E1F26;
+    --background-bg2:#1E1F26;
 
     --overviewcard-bg:#F4F4ED;
     
@@ -22,7 +24,8 @@
     --walletcard-btn-hover:#8093F1;
     --walletcard-btn-hover2:#8093f183;
 
-    --menubar-bg:#1E1F26;
+    // --menubar-bg:#1E1F26;
+    --menubar-bg:#131417;
 
     --menubar-item-active:#8093F1;
     --menubar-item-hover:#93a2eb;
@@ -30,6 +33,6 @@
     --item-shadow: rgba(0, 0, 0, 0.6) ;
     --item-shadow-hover: rgba(0, 0, 0, 0.5);
 
-
+    --card-gap : 15px;
     
 }
