--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -31,8 +31,8 @@
     --menubar-item-hover:#93a2eb;
 
     --item-shadow: rgba(0, 0, 0, 0.6) ;
-    --item-shadow-hover: rgba(0, 0, 0, 0.5);
+    --item-shadow-hover: rgba(0, 0, 0, 19%);
 
-    --card-gap : 15px;
+    --card-gap : 0.75rem;
     
 }
