--- a/src/style/mediaquerries.scss
+++ b/src/style/mediaquerries.scss
@@ -1,27 +1,27 @@
-@media (min-width: 750px) {
-    .col-xs-12 {
-        flex: 0 0 100%;
-        max-width: 100%;
-    }
-}
+// @media (min-width: 750px) {
+//     .col-xs-12 {
+//         flex: 0 0 100%;
+//         max-width: 100%;
+//     }
+// }
 
-@media (min-width: 970px) {
-    .col-sm-6 {
-        flex: 0 0 50%;
-        max-width: 50%;
-    }
-}
+// @media (min-width: 970px) {
+//     .col-sm-6 {
+//         flex: 0 0 50%;
+//         max-width: 50%;
+//     }
+// }
 
-@media (min-width: 1250px) {
-    .col-md-4 {
-        flex: 0 0 33.3333%;
-        max-width: 33.3333%;
-    }
-}
+// @media (min-width: 1250px) {
+//     .col-md-4 {
+//         flex: 0 0 33.3333%;
+//         max-width: 33.3333%;
+//     }
+// }
 
-@media (min-width: 1500px) {
-    .col-lg-3 {
-        flex: 0 0 25%;
-        max-width: 25%;
-    }
-}
+// @media (min-width: 1500px) {
+//     .container {
+//         // flex: 0 0 25%;
+//         max-width: 90%!important;
+//     }
+// }
