--- a/src/style/fonts.scss
+++ b/src/style/fonts.scss
@@ -4,3 +4,52 @@
     font-style: normal;
     font-weight: normal;
 }
+
+@font-face {
+    font-family:DancingScript;
+    src: url(~@/assets/fonts/Dancing_Script/DancingScript-VariableFont_wght.ttf);
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family:Abril_Fatface;
+    src: url(~@/assets/fonts/Abril_Fatface/AbrilFatface-Regular.ttf);
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family:Caveat;
+    src: url(~@/assets/fonts/Caveat/Caveat-VariableFont_wght.ttf);
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family:Indie_Flower;
+    src: url(~@/assets/fonts/Indie_Flower/IndieFlower-Regular.ttf);
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family:Pacifico;
+    src: url(~@/assets/fonts/Pacifico/Pacifico-Regular.ttf);
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family:Shadows_Into_Light;
+    src: url(~@/assets/fonts/Shadows_Into_Light/ShadowsIntoLight-Regular.ttf);
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family:Teko;
+    src: url(~@/assets/fonts/Teko/Teko-Regular.ttf);
+    font-style: normal;
+    font-weight: normal;
+}
