--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -13,16 +13,18 @@
 
     --overviewcard-bg:#F4F4ED;
     
+    --button: #5c5b509a;
+
     --walletcard-bg:#1E1F26;
     --walletcard-bg2:#1E1F26;
 
     --wallet-card-text : #1E1F26;
 
-    --walletcard-btn:#8093F1;
+    --walletcard-btn:#7e5a16a9;
     --walletcard-btn2:#8093F1;
 
-    --walletcard-btn-hover:#8093F1;
-    --walletcard-btn-hover2:#8093f183;
+    --walletcard-btn-hover:#5c5b509a;
+    --walletcard-btn-hover2:#5c5b50;
 
     // --menubar-bg:#1E1F26;
     --menubar-bg:#131417;
