--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -14,6 +14,7 @@
     --overviewcard-bg:#F4F4ED;
     
     --button: #5c5b509a;
+    --button-active: #85815cb6;
 
     --walletcard-bg:#1E1F26;
     --walletcard-bg2:#1E1F26;
@@ -30,7 +31,8 @@
     --menubar-bg:#131417;
 
     --menubar-item-active:#8093F1;
-    --menubar-item-hover:#93a2eb;
+    --menubar-item-hover:#dad06986;
+
 
     --item-shadow: rgba(0, 0, 0, 0.6) ;
     --item-shadow-hover: rgba(0, 0, 0, 19%);
